--- a/style/login.css
+++ b/style/login.css
@@ -4,6 +4,7 @@
 .pagina-login {
     background-color: antiquewhite;
 }
+
 .login {
     width: 100vw;
     height: 100vh;
@@ -11,8 +12,9 @@
     align-items: center;
     justify-content: center;
 }
+
 .form-login {
-    background-color: rgb(245, 217, 181);
+    background-color: var(--fundoLogin);
     width: 300px;
     height: 400px;
     display: flex;
@@ -21,14 +23,57 @@
     justify-content: center;
     border-radius: 25px;
 }
-.form-login input {
-    width: 80%;
-}
+
 .form-login button {
     margin-top: 25px;
     width: 80%;
-    padding: 5px;
+    padding: 8px;
+    border-radius: 5px;
+    border: none;
+    background-color: var(--btnSistema);
 }
-.form-login label {
-    display: flex;
+
+.form-login button:hover {
+    background-color: var(--btnSistemaHover);
+    color: var(--fonte);
+}
+
+.campo-input {
+    width: 300px;
+    height: 50px;
+    position: relative;
+    margin: 2rem 0;
+}
+
+.campo-input input {
+    position: absolute;
+    inset: 0;
+    background-color: transparent;
+    padding: 0 1rem;
+    font-size: 1rem;
+    outline: none;
+    border: 1px solid orange;
+    border-radius: .5rem;
+    color: var(--fonte);
+}
+
+.campo-input label {
+    position: relative;
+    top: 30%;
+    left: 1rem;
+    transform: translateY(-30%);
+    color: var(--fonte);
+    pointer-events: none;
+    padding: 0 .3rem;
+    background-color: var(--fundoLogin);
+    transition: 200ms ease-in-out top,
+        200ms ease-in-out font-size,
+        200ms ease-in-out font-color;
+}
+
+.campo-input input:focus+label,
+.campo-input input:valid+label {
+    top: -9px;
+    font-size: .8rem;
+    color: var(--fonte);
 }
