--- a/style/login.css
+++ b/style/login.css
@@ -77,3 +77,25 @@
     font-size: .8rem;
     color: var(--fonte);
 }
+
+.cadastro {
+    background-color: aqua;
+}
+
+.form-cadastro {
+    height: 100vh;
+    width: 70vw;
+}
+
+.mesma-linha {
+    display: flex;
+    flex-direction: row;
+}
+
+.campo-input-grande {
+    width: 90%;
+}
+
+.campo-input-pequeno {
+    width: 250px;
+}
